objects/maps__LiveDailyDriveTrip__c.object
<CustomObject>
    <fields>
        <fullName>maps__AMorPMDriveTrip__c</fullName>
        <description>AM/PM is determined based on the Timezone of the device</description>
        <inlineHelpText>AM/PM is determined based on the Timezone of the device</inlineHelpText>
        <label>AM or PM Drive Trip</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>AM/PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__BeginTripCity__c</fullName>
        <description>City where the start of the trip took place</description>
        <formula>maps__BeginTripStop__r.maps__City__c</formula>
        <inlineHelpText>City where the start of the trip took place</inlineHelpText>
        <label>Begin Trip City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BeginTripCountry__c</fullName>
        <description>Country where the start of the trip took place</description>
        <formula>maps__BeginTripStop__r.maps__Country__c</formula>
        <inlineHelpText>Country where the start of the trip took place</inlineHelpText>
        <label>Begin Trip Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BeginTripDateTime__c</fullName>
        <description>Time when this trip started</description>
        <formula>IF(ISPICKVAL(maps__BeginTripStop__r.maps__EventType__c, &quot;firstPoint&quot;), maps__BeginTripStop__r.maps__EventStarted__c, maps__BeginTripStop__r.maps__EventEnded__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time when this trip started</inlineHelpText>
        <label>Begin Trip Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__BeginTripFullAddress__c</fullName>
        <description>Address where the start of the trip took place</description>
        <inlineHelpText>Address where the start of the trip took place</inlineHelpText>
        <label>Begin Trip Full Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__BeginTripPostalCode__c</fullName>
        <description>Postal Code where the start of the trip took place</description>
        <formula>maps__BeginTripStop__r.maps__PostalCode__c</formula>
        <inlineHelpText>Postal Code where the start of the trip took place</inlineHelpText>
        <label>Begin Trip Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BeginTripState__c</fullName>
        <description>State where the start of the trip took place</description>
        <formula>maps__BeginTripStop__r.maps__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>State where the start of the trip took place</inlineHelpText>
        <label>Begin Trip State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BeginTripStop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Event Record, which is the start of this trip</description>
        <inlineHelpText>Lookup to the Event Record, which is the start of this trip</inlineHelpText>
        <label>Begin Trip Stop</label>
        <referenceTo>maps__LiveAssetDailySummaryEvent__c</referenceTo>
        <relationshipName>BeginTripStops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__BeginTripStreet__c</fullName>
        <description>Street where the start of the trip took place</description>
        <formula>maps__BeginTripStop__r.maps__Street_Address__c</formula>
        <inlineHelpText>Street where the start of the trip took place</inlineHelpText>
        <label>Begin Trip Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Date__c</fullName>
        <description>Date of the Trip</description>
        <inlineHelpText>Date of the trip</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__DrivingDuringHoliday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication if trip took place within denoted holiday off</description>
        <inlineHelpText>Indication if trip took place within denoted holiday off</inlineHelpText>
        <label>Driving During Holiday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DrivingOutsideWorkingHours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication if trip took place outside of denoted working hours</description>
        <inlineHelpText>Indication if trip took place outside of denoted working hours</inlineHelpText>
        <label>Driving Outside Working Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__EndTripCity__c</fullName>
        <description>City where the end of the trip took place</description>
        <formula>maps__EndTripStop__r.maps__City__c</formula>
        <inlineHelpText>City where the end of the trip took place</inlineHelpText>
        <label>End Trip City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndTripCountry__c</fullName>
        <description>Country where the end of the trip took place</description>
        <formula>maps__EndTripStop__r.maps__Country__c</formula>
        <inlineHelpText>Country where the end of the trip took place</inlineHelpText>
        <label>End Trip Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndTripDateTime__c</fullName>
        <description>Time when this trip ended</description>
        <formula>maps__EndTripStop__r.maps__EventStarted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time when this trip ended</inlineHelpText>
        <label>End Trip Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__EndTripFullAddress__c</fullName>
        <description>Address where the end of the trip took place</description>
        <inlineHelpText>Address where the end of the trip took place</inlineHelpText>
        <label>End Trip Full Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__EndTripPostalCode__c</fullName>
        <description>Postal Code where the end of the trip took place</description>
        <formula>maps__EndTripStop__r.maps__PostalCode__c</formula>
        <inlineHelpText>Postal Code where the end of the trip took place</inlineHelpText>
        <label>End Trip Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndTripState__c</fullName>
        <description>State where the end of the trip took place</description>
        <formula>maps__EndTripStop__r.maps__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>State where the end of the trip took place</inlineHelpText>
        <label>End Trip State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndTripStop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Event Record, which is the end of this trip</description>
        <inlineHelpText>Lookup to the Event Record, which is the end of this trip</inlineHelpText>
        <label>End Trip Stop</label>
        <referenceTo>maps__LiveAssetDailySummaryEvent__c</referenceTo>
        <relationshipName>EndTripStops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__EndTripStreet__c</fullName>
        <description>Street where the end of the trip took place</description>
        <formula>maps__EndTripStop__r.maps__Street_Address__c</formula>
        <inlineHelpText>Street where the end of the trip took place</inlineHelpText>
        <label>End Trip Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndUnixTimeStamp__c</fullName>
        <label>End Unix Time Stamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__LiveAssetDailySummary__c</fullName>
        <description>Live Asset Daily Summary record to which this mileage relates</description>
        <inlineHelpText>Live Asset Daily Summary record to which this mileage relates</inlineHelpText>
        <label>Live Asset Daily Summary</label>
        <referenceTo>maps__LiveAssetDailySummary__c</referenceTo>
        <relationshipLabel>Live Summary Drive Trips</relationshipLabel>
        <relationshipName>LiveDailyTrips</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__LiveDriver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denoted driver of this trip</description>
        <inlineHelpText>Denoted driver of this trip</inlineHelpText>
        <label>Live Driver</label>
        <referenceTo>maps__LiveDriver__c</referenceTo>
        <relationshipName>LiveDailyTrips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__StartUnixTimeStamp__c</fullName>
        <label>Start Unix Time Stamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalNumOfHardAccelEventsInTrip__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # of Hard Accel Events In Trip</description>
        <inlineHelpText>Total # of Hard Accel Events In Trip</inlineHelpText>
        <label>Total # of Hard Accel Events In Trip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalNumOfHardBrakeEventsInTrip__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # of hard braking events within this trip</description>
        <inlineHelpText>Total # of hard braking events within this trip</inlineHelpText>
        <label>Total # of Hard Braking Events this Trip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalNumOfSpeedThresholdEventsInTrip__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # of max speed threshold events within this trip</description>
        <inlineHelpText>Total # of max speed threshold events within this trip</inlineHelpText>
        <label>Total # of Speed Thresh Events in Trip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalNumOfSpeedingEventsInTrip__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # of speeding events within this trip</description>
        <inlineHelpText>Total # of speeding events within this trip</inlineHelpText>
        <label>Total # of Speeding Events within Trip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TripDistanceKm__c</fullName>
        <label>Trip Distance (km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TripDistanceMiles__c</fullName>
        <description>This is the total trip distance in miles.</description>
        <formula>ROUND(maps__TripDistanceKm__c * 0.62137, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total trip distance in miles.</inlineHelpText>
        <label>Trip Distance (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TripDriveTimeHours__c</fullName>
        <description>Duration of this trip, in hours</description>
        <formula>ROUND((maps__EndTripStop__r.maps__EventStarted__c - maps__BeginTripStop__r.maps__EventEnded__c)*24, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration of this trip, in hours</inlineHelpText>
        <label>Trip Drive Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TripDriveTimeMinutes__c</fullName>
        <description>Duration of this trip, in minutes</description>
        <formula>ROUND((maps__EndTripStop__r.maps__EventStarted__c - maps__BeginTripStop__r.maps__EventEnded__c)*24*60, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration of this trip, in minutes</inlineHelpText>
        <label>Trip Drive Time (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TripOrder__c</fullName>
        <description>The Order of Trips throughout the day</description>
        <inlineHelpText>The Order of Trips throughout the day</inlineHelpText>
        <label>Trip Order</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Maps Live Daily Drive Trip</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Maps Live Daily Drive Trip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Daily Drive Trips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>